--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -1,67 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props')" />
-  <Import Project="..\..\packages\NUnit.3.10.1\build\NUnit.props" Condition="Exists('..\..\packages\NUnit.3.10.1\build\NUnit.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5ADDEFB6-930C-46BC-8B2B-FDE5C7E3B5AD}</ProjectGuid>
+    <TargetFramework>net471</TargetFramework>
     <OutputType>Library</OutputType>
-    <RootNamespace>mdoc.Test</RootNamespace>
-    <AssemblyName>mdoc.Test</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core, Version=4.4.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FSharp.Core.4.3.4\lib\net45\FSharp.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="mdoc.Test.Cplusplus, Version=1.0.6709.28740, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\external\Test\mdoc.Test.Cplusplus.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationFramework">
       <Private>True</Private>
       <HintPath>..\..\external\Windows\PresentationFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="Mono.Cecil, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Mono.Cecil.0.10.0-beta5\lib\net40\Mono.Cecil.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil.Mdb, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Mono.Cecil.0.10.0-beta5\lib\net40\Mono.Cecil.Mdb.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil.Pdb, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Mono.Cecil.0.10.0-beta5\lib\net40\Mono.Cecil.Pdb.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil.Rocks, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Mono.Cecil.0.10.0-beta5\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
     <Reference Include="Windows">
       <HintPath>..\..\external\Windows\Windows.WinMD</HintPath>
@@ -72,105 +35,24 @@
     <Reference Include="Windows.Foundation.UniversalApiContract">
       <HintPath>..\..\external\Windows\Windows.Foundation.UniversalApiContract.winmd</HintPath>
     </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AttributeValueFormatterTest.cs" />
-    <Compile Include="BasicFormatterTests.cs" />
-    <Compile Include="BasicTests.cs" />
-    <Compile Include="CppWinRtMembersTests.cs" />
-    <Compile Include="CppWinRtFormatterTests.cs" />
-    <Compile Include="Enumeration\AttachedEntityTests.cs" />
-    <Compile Include="DotnetCoreAssemblyResolver.cs" />
-    <Compile Include="FrameworkIndexHelperTests.cs" />
-    <Compile Include="DocUtilsFSharpTests.cs" />
-    <Compile Include="DocUtilsTests.cs" />
-    <Compile Include="FSharp\BasicFSharpFormatterTests.cs" />
-    <Compile Include="CppCxFormatterMembersTests.cs" />
-    <Compile Include="CppFormatterTests.cs" />
-    <Compile Include="CppCxFormatterTypesTests.cs" />
-    <Compile Include="CppFullFormatterTests.cs" />
-    <Compile Include="FormatterTests.cs" />
-    <Compile Include="FSharp\FSharpFormatterTests.cs" />
-    <Compile Include="FSharp\FSharpUsageFormatterTests.cs" />
-    <Compile Include="JsMemberFormatterTests.cs" />
-    <Compile Include="JsUsageFormatterTests.cs" />
-    <Compile Include="MDocFileSourceTests.cs" />
-    <Compile Include="MDocUpdaterTests.cs" />
-    <Compile Include="NullableReferenceTypesTests.cs" />
-    <Compile Include="SampleClasses\ApplePlatformEnum.cs" />
-    <Compile Include="SampleClasses\EiiImplementclass.cs" />
-    <Compile Include="SampleClasses\GuidClass.cs" />
-    <Compile Include="SampleClasses\Interface_A.cs" />
-    <Compile Include="SampleClasses\Interface_B.cs" />
-    <Compile Include="SampleClasses\InternalEIICalss.cs" />
-    <Compile Include="SampleClasses\SomeFlagsEnum.cs" />
-    <Compile Include="SampleClasses\SomeIteratorStateMachine.cs" />
-    <Compile Include="SampleClasses\NotApplyAttributeValidFlagsEnum.cs" />
-    <Compile Include="SampleClasses\NotApplyAttributeInvalidFlagsEnum.cs" />
-    <Compile Include="SampleClasses\NullablesAndTuples.cs" />
-    <Compile Include="SampleClasses\AttributeDataTypeAttribute.cs" />
-    <Compile Include="SampleClasses\SomeAttribute.cs" />
-    <Compile Include="SampleClasses\SomeNestedTypes.cs" />
-    <Compile Include="SampleClasses\StaticClass.cs" />
-    <Compile Include="SampleClasses\TestClassThree.cs" />
-    <Compile Include="SpanSpecial.cs" />
-    <Compile Include="TypeMapTests.cs" />
-    <Compile Include="SampleClasses\ReadonlyRefClass.cs" />
-    <Compile Include="SampleClasses\ReadOnlySpan.cs" />
-    <Compile Include="SampleClasses\SomeDelegate.cs" />
-    <Compile Include="SampleClasses\SomeInterface.cs" />
-    <Compile Include="SampleClasses\Span.cs" />
-    <Compile Include="SampleClasses\TestClass.cs" />
-    <Compile Include="SampleClasses\SomeGenericClass.cs" />
-    <Compile Include="SampleClasses\WebHostHiddenTestClass.cs" />
-    <Compile Include="SampleClasses\SomeClass.cs" />
-    <Compile Include="SampleClasses\SomeClassWithManyConstructors.cs" />
-    <Compile Include="SampleClasses\SomeEmptyEnum.cs" />
-    <Compile Include="SampleClasses\SomeEnum.cs" />
-    <Compile Include="SampleClasses\TestPrivateClass.cs" />
-    <Compile Include="SampleClasses\TestClassTwo.cs" />
-    <Compile Include="SampleClasses\SomeStruct.cs" />
-    <Compile Include="SampleClasses\WebHostHiddenAttribute.cs" />
-    <Compile Include="StatisticsTests.cs" />
-    <Compile Include="UWPDocUtilsTests.cs" />
-    <Compile Include="VBFormatterTests.cs" />
-    <Compile Include="FrameworkAlternateTests.cs" />
-    <Compile Include="XmlConsts.cs" />
-    <Compile Include="XmlUpdateTests.cs" />
-    <Compile Include="ValidationTests.cs" />
-    <Compile Include="Enumeration\EnumeratorTests.cs" />
-    <Compile Include="Enumeration\ExceptionTests.cs" />
-    <Compile Include="Enumeration\CecilBaseTest.cs" />
-    <Compile Include="Enumeration\InterfaceTests.cs" />
+    <PackageReference Include="Mono.Cecil" Version="$(NuGetVersionMonoCecil)" />
+    <PackageReference Include="NUnit" Version="$(NuGetVersionNUnit)" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="cppcli\cppcli\cppcli.h">
+    <None Update="cppcli\cppcli\cppcli.h">
       <Link>SampleClasses\cppcli.h</Link>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\monodoc\monodoc.csproj">
-      <Project>{6E644802-B579-4037-9809-9CF4C7172C9D}</Project>
-      <Name>monodoc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\mdoc.csproj">
-      <Project>{7da7cd97-614f-4bcd-a2fa-b379590cea48}</Project>
-      <Name>mdoc</Name>
-    </ProjectReference>
-    <ProjectReference Include="mdoc.Test.FSharp\mdoc.Test.FSharp.fsproj">
-      <Project>{979f9f80-12fe-4236-9e93-6d554ab13701}</Project>
-      <Name>mdoc.Test.FSharp</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\monodoc\monodoc.csproj" />
+    <ProjectReference Include="..\mdoc.csproj" />
+    <ProjectReference Include="mdoc.Test.FSharp\mdoc.Test.FSharp.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="cppcli\Debug\cppcli.dll">
       <Link>SampleClasses\cppcli.dll</Link>
@@ -181,13 +63,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\NUnit.3.10.1\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\NUnit.3.10.1\build\NUnit.props'))" />
-    <Error Condition="!Exists('..\..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\NUnit3TestAdapter.3.13.0\build\net35\NUnit3TestAdapter.props'))" />
-  </Target>
+  <ItemGroup>
+    <Compile Remove="mdoc.Test.NullableReferenceTypes\**\*" />
+    <Compile Remove="UWPTestComponentCSharp\**\*" />
+  </ItemGroup>
 </Project>
