--- a/tools/DocStat/DocStat.Tests/DocStat.Tests.csproj
+++ b/tools/DocStat/DocStat.Tests/DocStat.Tests.csproj
@@ -26,18 +26,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="$(NuGetVersionNUnit)" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EcmaXmlHelperTests.cs" />
     <Compile Include="CommandUtilsTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="TestData\currentxml\t1.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
