--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ stages:
         tsaVersion: 'TsaV2'
         codebase: 'Existing'
         tsaEnvironment: 'PROD'
-        codeBaseName: 'Docs_default'
+        codeBaseName: 'Docs_Mdoc'
         uploadBinSkim: true
         uploadCredScan: true
         uploadAsync: true
